# pyinstaller-rpi-test

./: .gitignore  main.py  main.spec  pyproject.toml
.github/workflows/: arm-build.yml  build-release.yml
