[project]
name = "pyinstaller-rpi-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.3",
    "mplcursors>=0.6",
    "pydantic>=2.11.7",
    "pymysql>=1.1.2",
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "notebook>=7.4.5",
]

build = [
    "pyinstaller>=6.17",
]
